--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,7 +65,7 @@
     align-items: center;
     align-self: center;
     width: 520px;
-    height: 590px;
+    height: 570px;
     background-color: #3d3d3d;
     border: 1px solid rgb(212, 212, 212);
     border-radius: 12px;   
@@ -80,11 +80,19 @@
     align-items: center;
 }
 .form-container {
-    width: auto;  /* Adjust the percentage as needed */
-    margin: 0 auto; /* Center the form horizontally */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 430px;
     height: auto;
-    background-color:transparent;
-    border: none;
+    background-color: #3d3d3d;
+    border-radius: 12px;   
+    margin-top: auto;
+    margin: auto;
+    padding: 10px;
+    border: 1px solid rgb(212, 212, 212);
 }
 
 .home{
@@ -110,10 +118,40 @@
     width: 600px;
     height: auto;
     background-color: #3d3d3d;
-    border: none;
     border-radius: 12px;   
     margin-top: auto;
     margin: auto;
     padding: 10px;
+    border: 1px solid rgb(212, 212, 212);
+}
+.post-edit{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 420px;
+    height: auto;
+    background-color: #3d3d3d;
+    border-radius: 12px;   
+    margin-top: auto;
+    margin: auto;
+    padding: 10px;
+    border: 1px solid rgb(212, 212, 212);
+}
+.post-detail{
+     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 420px;
+    height: auto;
+    background-color: #3d3d3d;
+    border-radius: 12px;   
+    margin-top: auto;
+    margin: auto;
+    padding: 10px;
+    border: 1px solid rgb(212, 212, 212);
 }
   
