--- a/template/home.html
+++ b/template/home.html
@@ -3,19 +3,22 @@
 {% block content %}
 {% if user.is_authenticated %}
 <div class="home">
-
    <h1 style="font-family: Poppins; font-weight: bold; color: aliceblue;">Hi, {{user.username}}!</h1> 
  <div style="font-family: Poppins;">
     <p > 
         <a href="{% url 'post' %}" style="text-decoration: none; font-family: Poppins; font-weight: bold; " class="btn btn-success"> See Discussion</a>
+        <form action="{% url 'logout' %}" method="post">
+         {% csrf_token %}
+         <div style="text-align: center;">
+            <button type="submit" style="box-decoration-break:slice; font-family: Poppins; font-weight: bold;" class="btn btn-success">Logout</button>
+         </div>
+        </form>
      </p>
 </div>
  {% else %}
  <div style="font-family: Poppins;">
-    <p> You are not logged in </p>
-  <a href="{% url 'login' %}">Log in</a>
-  <p> do not have account <a href="{% url 'signup' %}">sign up</a></p> 
+    <h1 style="font-weight: bold; color: aliceblue; text-align: center;" >Discussion</h1>
+    <h3 style="font-weight: bold; color: aliceblue; text-align: center;">Login or SignUp to join Our Discussion</h3>
  </div>
- 
-{% endif %}
+ {% endif %}
 {%endblock content%}
