--- a/template/post_edit.html
+++ b/template/post_edit.html
@@ -1,10 +1,15 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<h1> edit </h1>
-<form action="" method="post">
-    {% csrf_token %}
-    {{form|crispy}}
-    <button class="btn btn-info ml-2" type="submit">update</button>
-</form>
+<div class="post-edit">
+    <h1 style="font-family: Poppins; font-weight: bold; color: aliceblue; font-size: 30px;"> edit </h1>
+    <form action="" method="post" style="font-family: Poppins; color: aliceblue; ">
+        {% csrf_token %}
+        {{form|crispy}}
+        <div style="text-align: center;">
+        <button class="btn btn-success" type="submit" style="font-family: Poppins; font-weight: bold;">update</button>
+        </div>
+    </form>
+</div>
+
 {% endblock content %}
