--- a/template/post_new.html
+++ b/template/post_new.html
@@ -4,11 +4,13 @@
 {% block content %}
 <div class="form-container" style="font-family: Poppins; color: aliceblue;">
   <div>
-    <h1 style="font-weight:bold;">Add Post</h1>
+    <h1 style="font-weight:bold; font-size: 30px; text-align: center;">Add Post</h1>
     <form action="" method="post">
       {% csrf_token %}
       {{ form|crispy }}
-      <button class="btn btn-success" type="submit" style="font-weight: bold;">post</button>
+      <div style="text-align: center;">
+        <button class="btn btn-success" type="submit" style="font-weight: bold;">post</button>      
+      </div>
     </form>
   </div>
 </div>
