--- a/template/registration/signup.html
+++ b/template/registration/signup.html
@@ -8,7 +8,9 @@
         <form action="" method="post" >
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="btn btn-success" type="submit"  style="font-family: Poppins; font-weight: bold; color: aliceblue;"> Sign Up </button>
+            <div style="text-align: center;">
+                <button class="btn btn-success" type="submit"  style="font-family: Poppins; font-weight: bold; color: aliceblue;"> Sign Up </button>
+            </div>
         </form>
     </div>
 </div>
